<resources>
    <string name="app_name">AC03</string>
    <string name="add_article">Add Article</string>
    <string name="delete_article">Delate Article</string>
    <string name="article_code">Article Code</string>
    <string name="article_description">Article Description</string>
    <string name="article_price">Article Price</string>
    <string name="article_price_iva">Article Price + IVA</string>
    <string name="article_family">Article Family</string>
    <string name="article_stock_activated">Article Stock Activated</string>
    <string name="article_current_stock">Article Current Stock</string>
    <string name="sort_order_prompt">Select Sort Order</string>
    <string name="stock_activated">Stock Activated</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="stock">Stock</string>
    <string name="family">Family:</string>
    <string name="price">Price</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="filter_by_description">Filter by Description</string>
    <string name="filter_by_stock">Filter by Stock</string>
    <string name="sort_by_code">Sort by Code</string>
    <string name="settings">SETTINGS:</string>
    <string name="iva_percentage">IVA Percentage:</string>
    <string name="enter_iva_percentage">Enter IVA Percentage</string>
    <string name="electr_nica">Electrònica</string>
    <string name="roba">Roba</string>
    <string name="llibre">Llibre</string>
    <string name="joguina">Joguina</string>
    <string name="code_and_description_are_required">Code and Description are required.</string>
    <string name="stock_must_be_0_or_positive_when_stock_is_activated">Stock must be 0 or positive when stock is activated.</string>
    <string name="article_with_the_same_code_already_exists">Article with the same code already exists.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_article">Are you sure you want to delete this article?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="iva_saved">IVA saved:</string>
    <string name="alimentacio">Alimentació</string>
</resources>