<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextCode"
        style="@style/WhiteTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextDescription"
        style="@style/WhiteTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/family"
        android:textColor="@color/white"
        android:minHeight="48dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerFamily"
        style="@style/WhiteTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/family"
        android:minHeight="48dp"
        android:textColorHint="@color/white" />


    <EditText
        android:id="@+id/editTextPrice"
        style="@style/WhiteTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextStock"
        style="@style/WhiteTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stock"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <CheckBox
        android:id="@+id/checkBoxStock"
        style="@style/WhiteTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_activated"
        android:textColorHint="@color/white" />
</LinearLayout>
