<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/WhiteTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColorHint="@color/white" />

    <TextView
        style="@style/WhiteTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iva_percentage"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextIva"
        style="@style/WhiteTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_iva_percentage"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        android:autofillHints="" />

</LinearLayout>
